dist/LineScript-win64-20260616/tests/cases/compile_fail/state_speed_bad_arity.lsc
main() -> i64 do
  .stateSpeed(1)
  return 0
end
